# swlwi

./: .gitignore  Index.flyde  Makefile  Rag.flyde  Rag_OpenAI.flyde  Readme.md  Scrape.flyde  app.py  flyde-nodes.json  flyde-rag.avif  pyproject.toml
swlwi/: net.py  parser.py  rag.flyde.ts  rag.py  schema.py  scrape.flyde.ts  scrape.py
tests/: test_net.py  test_parser.py  test_rag.py  test_scrape.py
