[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "swlwi"
version = "0.0.3"
requires-python = ">= 3.10"
authors = [{ name = "Vladimir Sibirov" }]
description = "Software Leads Weekly Intelligent Index"
readme = "Readme.md"

dependencies = [
    "beautifulsoup4 >= 4.0.0, < 5.0.0",
    "chardet >= 5.0.0, < 6.0.0",
    "langchain ~= 0.3.0",
    "langchain-community ~= 0.3.2",
    "langchain-huggingface ~= 0.3.0",
    "langchain-core ~= 0.3.0",
    "langchain-ollama ~= 0.3.0",
    "langchain-openai ~= 0.3.0",
    "langchain-text-splitters ~= 0.3.0",
    "markdownify ~= 1.1.0",
    "playwright >= 1.0.0, < 2.0.0",
    "pyflyde ~= 0.1.0",
    "requests >= 2.0.0, < 3.0.0",
    "sentence-transformers ~= 4.1.0",
    "streamlit ~= 1.46.0",
    "sqlite-vec ~= 0.1.0",
]

[tool.setuptools.packages.find]
where = ["swlwi"]

[project.optional-dependencies]
dev = ["setuptools", "build", "black", "coverage", "flake8", "mypy"]
